--- a/NewsSniffer.WebUi/src/app/articles/article-list/article-list.component.scss
+++ b/NewsSniffer.WebUi/src/app/articles/article-list/article-list.component.scss
@@ -47,7 +47,7 @@
             border-left: 5pt double black;
             border-radius: 0 0.5em 0.5em 0;
 
-            .detail-link {
+            .detail-text {
                 text-align: center;
                 font-weight: bold;
                 font-size: large;
