--- a/NewsSniffer.WebUi/src/app/articles/articles-controls/articles-controls.component.html
+++ b/NewsSniffer.WebUi/src/app/articles/articles-controls/articles-controls.component.html
@@ -1,5 +1,8 @@
 <div class="controls-container">
-    <div (click)="onUpdateArticles()" class="control-item">
+    <div (click)="onUpdateArticles()" [ngClass]="{'disabled': updateRunning}" class="control-item">
         Update Articles
+    </div>
+    <div (click)="onGetAll()" [ngClass]="{'disabled': getAllRunning}" class="control-item">
+        GetAll Request
     </div>
 </div>
