--- a/NewsSniffer.WebUi/src/app/articles/articles-page/articles-page.component.scss
+++ b/NewsSniffer.WebUi/src/app/articles/articles-page/articles-page.component.scss
@@ -1,3 +1,14 @@
 .page-container {
     margin: 1rem;
 }
+
+.fail-container {
+    padding: 1rem;
+    
+    .fail-message {
+        margin-top: 0.5rem;
+        font-size: larger;
+        font-weight: bold;
+        color: darkorange;
+    }
+}
