--- a/NewsSniffer.WebUi/src/app/app-header/app-header.component.html
+++ b/NewsSniffer.WebUi/src/app/app-header/app-header.component.html
@@ -2,14 +2,14 @@
     <a class="logo" routerLink="/">News Sniffer</a>
 
     <div class="items-container">
-        <div class="item">
-            <a class="item-link" routerLink="/articles/page/1">Articles</a>
+        <div class="item" routerLink="/articles" routerLinkActive="active">
+            Articles
         </div>
-        <div class="item">
-            <a class="item-link" routerLink="/outlets">Outlets</a>
+        <div class="item" routerLink="/outlets" routerLinkActive="active">
+            Outlets
         </div>
-        <div class="item">
-            <a class="item-link" routerLink="/training">Training</a>
+        <div class="item" routerLink="/training" routerLinkActive="active">
+            Training
         </div>
     </div>
 </div>
