--- a/NewsSniffer.WebUi/src/app/articles/article-detail/article-detail.component.html
+++ b/NewsSniffer.WebUi/src/app/articles/article-detail/article-detail.component.html
@@ -1,13 +1,15 @@
-<div class="article-container">
+<div *ngIf="articleExists()" class="article-container">
     <div class="title">{{article.title}}</div>
     <div class="details-container">
         <div class="info-container">
             <div class="outlet">{{article.outletCode}}</div>
             <div class="date">{{article.date}}</div>
         </div>
-        <div class="btn-back" routerLink="/articles/page/1">Back</div>
     </div>
     <div class="body">
         {{article.body}}
     </div>
+</div>
+<div *ngIf="!articleExists()">
+    <app-page-not-found></app-page-not-found>
 </div>
