--- a/NewsSniffer.WebUi/src/app/articles/article-detail/article-detail.component.scss
+++ b/NewsSniffer.WebUi/src/app/articles/article-detail/article-detail.component.scss
@@ -12,37 +12,30 @@
     .details-container {
         display: flex;
         width: 100%;
-        background-color: lightgrey;
+        background-color: grey;
         border-radius: 1rem;
 
         .info-container {
             display: flex;
             flex-direction: row;
             width: 50%;
+            min-height: 2rem;
             justify-content: space-evenly;
             align-items: center;
             border-right: 2pt solid black;
+            color: white;
+
             .outlet {
                 font-size: larger;
                 font-weight: bold;
             }
+
             .date {
                 text-decoration: underline;
             }
         }
-        .btn-back {
-            margin: auto;
-            background-color: gray;
-            color: white;
-            font-size: x-large;
-            padding: 0.5rem 1rem 0.5rem 1rem;
-            border-radius: 0.4rem;
-            &:hover{
-                background-color: darkslategrey;
-                cursor: pointer;
-            }
-        }
     }
+
     .body {
         width: 100%;
         justify-self: left;
