Add markers and inpressions. Refactoring.

--- a/NewsSniffer.WebUi/src/app/app-common/pagination/pagination.component.scss
+++ b/NewsSniffer.WebUi/src/app/app-common/pagination/pagination.component.scss
@@ -3,6 +3,8 @@
     justify-content: center;
     background-color: gray;
     color: white;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     padding: 0.2rem;
 
     .select-container {
