--- a/NewsSniffer.WebUi/src/app/articles/article-list/article-list.component.html
+++ b/NewsSniffer.WebUi/src/app/articles/article-list/article-list.component.html
@@ -1,14 +1,3 @@
 <div class="list-container">
-    <div *ngFor="let article of articles" class="news-container">
-        <div class="prefix-container">
-            <div class="news-outlet">{{article.outletCode}}</div>
-            <div class="news-date">{{article.date}}</div>
-        </div>
-        <div class="body-container">
-            <div class="news-title">{{article.title}}</div>
-        </div>
-        <div class="affix-container" [routerLink]="['/articles', article.id]">
-            <div class="detail-text">Full</div>
-        </div>
-    </div>
+   <app-article-list-item *ngFor="let article of articles" [article]="article"></app-article-list-item>
 </div>
