--- a/NewsSniffer.WebUi/src/app/outlets/outlets/outlets.component.html
+++ b/NewsSniffer.WebUi/src/app/outlets/outlets/outlets.component.html
@@ -1,2 +1,2 @@
-<app-outlet-controls></app-outlet-controls>
+<app-section-controls [controls]="controls"></app-section-controls>
 <app-outlet-list></app-outlet-list>
