--- a/NewsSniffer.WebUi/src/app/articles/articles/articles.component.html
+++ b/NewsSniffer.WebUi/src/app/articles/articles/articles.component.html
@@ -1,5 +1,14 @@
-<app-articles-controls></app-articles-controls>
-<router-outlet></router-outlet>
+<app-section-controls [controls]="controls"></app-section-controls>
+<app-pagination 
+    *ngIf="pageNumbers.length > 1" 
+    [itemsPerPage]="itemsPerPage" 
+    [pageNumbers]="pageNumbers">
+</app-pagination>
+<app-articles-page 
+    [itemsPerPage]="itemsPerPage"
+    [markFilter]="markFilter"
+    [impressionFilter]="impressionFilter">
+</app-articles-page>
 <app-pagination 
     *ngIf="pageNumbers.length > 1" 
     [itemsPerPage]="itemsPerPage" 
