--- a/NewsSniffer.WebUi/src/app/outlets/outlet-test/outlet-test.component.html
+++ b/NewsSniffer.WebUi/src/app/outlets/outlet-test/outlet-test.component.html
@@ -17,6 +17,6 @@
         </app-generic-button>
     </div>
     <div class="test-results-container">
-        <div class="test-results">{{testResults}}</div>
+        <div class="test-results">{{testResults | json}}</div>
     </div>
 </div>
