--- a/NewsSniffer.WebUi/src/app/outlets/outlet-details/outlet-details.component.scss
+++ b/NewsSniffer.WebUi/src/app/outlets/outlet-details/outlet-details.component.scss
@@ -109,7 +109,11 @@
                 }
 
                 .mobile-wrapper {
-                    @media only screen and (max-width: 800) {
+                    display: flex;
+                    width: 100%;
+                    justify-content: space-around;
+                    align-items: center;
+                    @media only screen and (max-width: 800px) {
                         flex-direction: column;
                         justify-items: center;
                     }
@@ -131,7 +135,6 @@
                     }
     
                     input {
-                        margin-inline-start: auto;
                         @media only screen and (max-width: 800px) {
                             padding: 0.4rem;
                             border-radius: 0.5rem;
